--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>spring-hateoas</artifactId>
             <version>2.3.3</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.netflix.graphql.dgs</groupId>-->
+<!--            <artifactId>graphql-dgs-spring-boot-starter</artifactId>-->
+<!--            <version>9.1.2</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
