--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,11 @@
             <version>2.3.3</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.netflix.graphql.dgs</groupId>-->
-<!--            <artifactId>graphql-dgs-spring-boot-starter</artifactId>-->
-<!--            <version>9.1.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.netflix.graphql.dgs</groupId>
+            <artifactId>graphql-dgs-spring-boot-starter</artifactId>
+            <version>9.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
