--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
             <artifactId>graphql-dgs-spring-boot-starter</artifactId>
             <version>9.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
