Add RabbitMQ config in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ logging.level.blog = WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
+
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.virtual-host=vhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
+server.port=8081
